--- a/kyobo_back_mongo-0.1/package.json
+++ b/kyobo_back_mongo-0.1/package.json
@@ -4,7 +4,7 @@
   "description": "book api example",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand --force-exit",
     "start": "nodemon index.js"
   },
   "author": "Narae jo",
@@ -15,6 +15,7 @@
     "mongoose": "^6.1.1"
   },
   "devDependencies": {
-    "jest": "27.5.1"
+    "jest": "27.5.1",
+    "supertest": "6.2.2"
   }
 }
